@@ -1,3 +1,10 @@
+2005-08-24  Stefan Kost  <ensonic@users.sf.net>
+
+	* gtk-doc-manual.xml:
+          more notes in the faq
+          setup chapter is nearly complete
+          more notes about doc comment format
+
 2005-08-15  Stefan Kost  <ensonic@users.sf.net>
 
 	* .cvsignore:
